# Warbler

./: .gitignore  .gitpod.yml  LICENSE.md  Pipfile  README.md  embedtemplates.py  main.py  mainminify.py  outline.txt  pyproject.toml  requirements.txt  runthisfirst.py
.github/: FUNDING.yml
config/: PLEASEREADMEFIRST.txt  blacklist.txt  config.py  graylist.txt
database/: punish.csv  punishconfig.sql
